examples/test/testpolicy15716.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15716
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key46: value23
      key10: value0
      key1: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value3
          key17: value46
      podSelector:
        matchLabels:
          key2: value8
          key44: value23
          key25: value41
